# QT-music-player

./: CMakeLists.txt  Main.qml  Resource.qrc  main.cpp
